--- a/projects.html
+++ b/projects.html
@@ -32,17 +32,16 @@
         <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
     </head>
 
-    <!--
-    
-             ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
-            ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
-            ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
-            ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
-            ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
-             ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
-                                      Adrian Bece, 2015.
-    -->
-
+            <!--
+        
+                     ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+                    ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+                    ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+                    ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+                    ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+                     ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                              Adrian Bece, 2015.
+            -->
     <body>
         <!-- NAV  -->
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -54,7 +53,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="./index.html"><img src="./resources/images/ca_nav_logo.gif" alt="Code Adrian"/></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./resources/images/ca_nav_logo.gif" alt="Code Adrian" /></a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -190,7 +189,7 @@
                         <div class="row">
                             <h4>Screenshots: </h4>
                             <div class="col-lg-3"><a class="lightbox-a" title="Main Window"><img alt="Omnivison - main window" src="./projects/images/omni_01.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Add New Camera"><img alt="Omnivison - add new camera"  src="./projects/images/omni_02.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Add New Camera"><img alt="Omnivison - add new camera" src="./projects/images/omni_02.JPG" class="thumbnail img-responsive"></a></div>
                             <div class="col-lg-3"><a class="lightbox-a" title="Play Video"><img alt="Omnivison - play video" src="./projects/images/omni_03.JPG" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
@@ -219,7 +218,7 @@
 
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Simon Says - Easy Mode"><img alt="Hexagonal Melody - Simon says mode"  src="./projects/images/Hex_01.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Simon Says - Easy Mode"><img alt="Hexagonal Melody - Simon says mode" src="./projects/images/Hex_01.JPG" class="thumbnail img-responsive"></a></div>
                             <div class="col-lg-3"><a class="lightbox-a" title="Simon Says - Advanced Mode"><img alt="Hexagonal Melody - Simon says advanced mode" src="./projects/images/Hex_03.JPG" class="thumbnail img-responsive"></a></div>
                             <div class="col-lg-3"><a class="lightbox-a" title="Free jam"><img alt="Hexagonal Melody - Free jam mode" src="./projects/images/Hex_02.JPG" class="thumbnail img-responsive"></a></div>
                         </div>
@@ -308,7 +307,7 @@
                             <h4>Screenshots: </h4>
                             <div class="col-lg-3"><a class="lightbox-a" title="Login Window"><img alt="Foodly - login window" src="./projects/images/FoodlyApp_01.JPG" class="thumbnail img-responsive"></a></div>
                             <div class="col-lg-3"><a class="lightbox-a" title="Main Window"><img alt="Foodly - main window" src="./projects/images/FoodlyApp_02.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Main Window - alternate"><img alt="Foodly - main window"  src="./projects/images/FoodlyApp_03.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Main Window - alternate"><img alt="Foodly - main window" src="./projects/images/FoodlyApp_03.JPG" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -318,7 +317,7 @@
             <div class="container-full container-gray" id="g_foodlyWeb">
                 <div class="row">
                     <h2>Foodly Website</h2>
-                    <h5>Project for Software Startup Academy 2014./2015.</h5>
+                    <h5>Software Startup Academy finalist 2014./2015.</h5>
                     <hr />
                     <div class="col-lg-2">
                         <h4>Basic info: </h4>
@@ -333,12 +332,17 @@
                     <div class="col-lg-10">
                         <h4>Details: </h4>
                         <p>"Foodly" is one of my most versatile and challenging projects so far. "Foodly" is a system for ordering personalized food online from various restaurants. Web site is not complete and I'm planning to recreate the website in ASP .NET or just use Bootstrap to improve it's quality to today's standards. Website features location-based restaurant picker, Pizza and Hamburger editor for order personalization and a custom-made webshop for online food ordering.</p>
-                        <p><b>Note: </b>Some features requires XAMPP and the specific database which can be imported from the project folder.</p>
+                        <p><b>Note: </b>Some features requires XAMPP and the specific database which can be imported from the project folder. Foodly was chosen to be one of the 5 finalists of Microsoft's Software Startup Academy 2015. and it was featured on Windays in April of 2015. Although Foodly didn't win the competition, I've received some great advice from professionals and colleagues. Foodly was featured on various news and tech sites (see links below).</p>
+                        <ul>
+                            <li><a href="http://blog.windays.hr/tko-su-finalisti-ssa-2015-36111/">Windays</a></li>
+                            <li><a href="http://www.vecernji.hr/startup/adrian-bece-autor-sustava-za-narucivanje-hrane-foodly-1002709">Večernji list</a></li>
+                            <li><a href="http://www.netokracija.com/finalisti-software-startup-academy-2015-101636">Netokracija</a></li>
+                        </ul>
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Restaurant picker"><img alt="Foodly - Restaurant picker"  src="./projects/images/FoodlyWeb_03.gif" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Webshop"><img alt="Foodly - Webshop"  src="./projects/images/FoodlyWeb_02.gif" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Pizza Customization"><img alt="Foodly - Customization"  src="./projects/images/FoodlyWeb_01.gif" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Restaurant picker"><img alt="Foodly - Restaurant picker" src="./projects/images/FoodlyWeb_03.gif" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Webshop"><img alt="Foodly - Webshop" src="./projects/images/FoodlyWeb_02.gif" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Pizza Customization"><img alt="Foodly - Customization" src="./projects/images/FoodlyWeb_01.gif" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -348,7 +352,7 @@
             <div class="container-full container-blue" id="g_easyLearn">
                 <div class="row">
                     <h2>Easy Learn Website</h2>
-                    <h5>Work in progress. Project for Microsoft's Imagine Cup 2015.</h5>
+                    <h5>Work in progress. Project for Microsoft's Imagine Cup 2015. (Discontinued)</h5>
                     <hr />
                     <div class="col-lg-2">
                         <h4>Basic info: </h4>
@@ -366,8 +370,8 @@
 
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Logo design"><img alt="Logo"  src="./projects/images/EasyLearn_01.jpg" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Home page (WIP)"><img alt="Homepage"  src="./projects/images/EasyLearn_02.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Logo design"><img alt="Logo" src="./projects/images/EasyLearn_01.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Home page (WIP)"><img alt="Homepage" src="./projects/images/EasyLearn_02.jpg" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -417,7 +421,7 @@
 
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Code"><img alt="Code"  src="./projects/images/Kernel_01.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Code"><img alt="Code" src="./projects/images/Kernel_01.JPG" class="thumbnail img-responsive"></a></div>
                             <div class="col-lg-3"><a class="lightbox-a" title="Edge Detection Kernel"><img alt="Edge detection" src="./projects/images/Kernel_02.JPG" class="thumbnail img-responsive"></a></div>
                             <div class="col-lg-3"><a class="lightbox-a" title="Blur Kernel"><img alt="Blur image" src="./projects/images/Kernel_03.JPG" class="thumbnail img-responsive"></a></div>
                         </div>
@@ -446,8 +450,8 @@
                         <div class="row">
                             <h4>Screenshots: </h4>
                             <div class="col-lg-3"><a class="lightbox-a" title="Robotic Manipulator"><img alt="Robotic manipulator" src="./projects/images/Robot_01.jpg" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Trajectory Simulation"><img alt="Trajectory"  src="./projects/images/Robot_02.jpg" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Object Detection"><img alt="Object detection"  src="./projects/images/Robot_03.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Trajectory Simulation"><img alt="Trajectory" src="./projects/images/Robot_02.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Object Detection"><img alt="Object detection" src="./projects/images/Robot_03.jpg" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -475,8 +479,8 @@
                         <div class="row">
                             <h4>Screenshots: </h4>
                             <div class="col-lg-3"><a class="lightbox-a" title="Line detection"><img alt="Line detection" src="./projects/images/Vision_01.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Position detection"><img alt="Position detection"  src="./projects/images/Vision_02.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Object detection"><img alt="Object detection"  src="./projects/images/Vision_03.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Position detection"><img alt="Position detection" src="./projects/images/Vision_02.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Object detection"><img alt="Object detection" src="./projects/images/Vision_03.jpg" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -517,7 +521,7 @@
                 <!-- FOOTER -->
                 <footer>
                     <hr>
-                <p class="pull-right"><a id="a_projects_top">Back to top</a></p>
+                    <p class="pull-right"><a id="a_projects_top">Back to top</a></p>
                     <p>© 2015 Adrian Bece </p>
                 </footer>
             </div>
