--- a/index.html
+++ b/index.html
@@ -179,6 +179,13 @@
                         </tr>
 
                         <tr>
+                            <td class="eduDate">June 2015. - July 2015.</td>
+                            <td><b><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp;Inchoo - internship and training</b><hr class="noPadding" />
+                                <p>Magento, advanced HTML5, advanced CSS3, Javascript, Jquery, PHP</p>
+                            </td>
+                        </tr>
+
+                        <tr>
                             <td class="eduDate">2013. - present</td>
                             <td><b><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp;Faculty of Electrical Engineering Osijek</b><hr class="noPadding" />
                                 <p>Master's degree studies in fields of Process Computing. Computer System design, Automatics, HTML, CSS, Javascript, PHP, MySQL, Robotics, Computer Vision, Computer Networks, etc.</p>
@@ -214,6 +221,13 @@
                     <h4 class="centered">Work experience</h4>
 
                     <table class="expTable pull-left">
+
+                        <tr>
+                            <td class="expDate">June 2015. - July 2015.</td>
+                            <td><b><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>&nbsp; Inchoo - Internship and training</b><hr class="noPadding" />
+                                <p>I've applied for an one month intership and training at Inchoo where I've been studing and working in Magento. I've expanded my skills as an frontend developer and learned how to work with Magento.</p>
+                            </td>
+                        </tr>
 
                         <tr>
                             <td class="expDate">April 2015.</td>
