--- a/skills.html
+++ b/skills.html
@@ -132,6 +132,16 @@ Familiar
                             </div>
                         </div>
 
+
+                        <div class="col-md-4">
+                            <h5><a id="a_magento">Magento</a></h5>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
+ Profficient
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="col-md-4">
                             <h5><a id="a_Matlab">Matlab</a></h5>
                             <div class="progress">
@@ -404,6 +414,30 @@ Familiar
                 </div>
                 <div class="col-md-4"><h5>Example from my project</h5>
                     <p><a class="btn btn-lg btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#g_foodlyWeb");' role="button">PHP Project »</a></p>
+                    <div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-full container-blue" id="magento">
+            <h2>Magento</h2>
+            <h5>Profficient</h5><hr>
+            <p>I've been working with Magento since June 2015. while I was an intern at Inchoo. I've learned the basics of editing the frontend in Magento and working with some things in backend. I used HTML, CSS and Javascript to edit the Magento website.
+            </p>
+            <div class="row">
+                <div class="col-md-8">
+                    <b>Knowledge span: </b>
+                    <ul>
+                        <li>Working in Magento admin panel</li>
+                        <li>Editing Magento websites</li>
+                        <li>Styling Magento websites using HTML, CSS and Javascript</li>
+                        <li>Responsive design</li>
+                        <li>etc.</li>
+                    </ul>
+                </div>
+                <div class="col-md-4"><h5>Example from my project</h5>
+                    <p><a class="btn btn-lg btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#g_magento");' role="button">Magento Project »</a></p>
                     <div>
                     </div>
                 </div>
