--- a/index.html
+++ b/index.html
@@ -25,15 +25,14 @@
 <![endif]-->
 <header>
     <div class="container flex-container">
-        <div>
-            <h1 class="title">codeAdrian</h1>
+        <div class="title">
+            <h1>codeAdrian</h1>
         </div>
         <nav>
             <ul class="flex-container">
                 <li>About Me</li>
-                <li>Skills</li>
                 <li>Projects</li>
-                <li>Experience</li>
+                <li>Biography</li>
                 <li>Contact Me</li>
             </ul>
         </nav>
@@ -44,10 +43,10 @@
         <img src="images/hero-image.png" alt="codeAdrian hero image" width="1920" height="1080"/>
         <section>
             <div class="hero-text">
-            <h2 class="hero-title">Adrian Bece</h2>
+                <h2 class="hero-title">Adrian Bece</h2>
                 <ul>
-                    <li>Frontend developer</li>
-                    <li>Certified Magento developer</li>
+                    <li>Frontend Developer</li>
+                    <li>Certified Magento Developer</li>
                     <li>Loves rock and metal music</li>
                     <li>Reads comics and sci-fi books</li>
                     <li>Occasionally plays PC games</li>
@@ -57,10 +56,18 @@
         </section>
     </article>
     <article class="container-skills narrow-container" id="skills">
-        <section class="text-center">
-            <h2>Skills</h2>
+        <section>
+            <h2 class="text-center">About Me</h2>
+            <p>My name is Adrian Bece. I am a Frontend Developer specializing in eCommerce. I am currently working at
+                Inchoo - a full service eCommerce agency. I live in Osijek, Croatia. I graduated at Faculty of Electrical
+                Engineering in Osijek in 2015 where I've earned the Master's degree in computer science.
+                In 2016 I have became a Certified Magento Frontend Developer.</p>
+            <p>I have worked at several Magento and Wordpress projects while working at Inchoo. Previously, I have
+            worked on several notable personal projects ranging from website specializing of ordering customized pizza
+            to various simple games and image-processing software.</p>
         </section>
         <section class="skills-logos">
+            <h3>My Skills And Tools</h3>
             <ul class="flex-container">
                 <li>
                     <svg viewBox="0 0 128 128">
@@ -128,14 +135,15 @@
             <ul class="flex-container">
                 <li>
                     <svg viewBox="0 0 128 128">
-                        <path fill="#6181B6" d="M64 33.039c-33.74 0-61.094 13.862-61.094 30.961s27.354 30.961 61.094 30.961 61.094-13.862 61.094-30.961-27.354-30.961-61.094-30.961zm-15.897 36.993c-1.458 1.364-3.077 1.927-4.86 2.507-1.783.581-4.052.461-6.811.461h-6.253l-1.733 10h-7.301l6.515-34h14.04c4.224 0 7.305 1.215 9.242 3.432 1.937 2.217 2.519 5.364 1.747 9.337-.319 1.637-.856 3.159-1.614 4.515-.759 1.357-1.75 2.624-2.972 3.748zm21.311 2.968l2.881-14.42c.328-1.688.208-2.942-.361-3.555-.57-.614-1.782-1.025-3.635-1.025h-5.79l-3.731 19h-7.244l6.515-33h7.244l-1.732 9h6.453c4.061 0 6.861.815 8.402 2.231s2.003 3.356 1.387 6.528l-3.031 15.241h-7.358zm40.259-11.178c-.318 1.637-.856 3.133-1.613 4.488-.758 1.357-1.748 2.598-2.971 3.722-1.458 1.364-3.078 1.927-4.86 2.507-1.782.581-4.053.461-6.812.461h-6.253l-1.732 10h-7.301l6.514-34h14.041c4.224 0 7.305 1.215 9.241 3.432 1.935 2.217 2.518 5.418 1.746 9.39zM95.919 54h-5.001l-2.727 14h4.442c2.942 0 5.136-.29 6.576-1.4 1.442-1.108 2.413-2.828 2.918-5.421.484-2.491.264-4.434-.66-5.458-.925-1.024-2.774-1.721-5.548-1.721zM38.934 54h-5.002l-2.727 14h4.441c2.943 0 5.136-.29 6.577-1.4 1.441-1.108 2.413-2.828 2.917-5.421.484-2.491.264-4.434-.66-5.458s-2.772-1.721-5.546-1.721z"></path>
+                        <path fill="#6181B6"
+                              d="M64 33.039c-33.74 0-61.094 13.862-61.094 30.961s27.354 30.961 61.094 30.961 61.094-13.862 61.094-30.961-27.354-30.961-61.094-30.961zm-15.897 36.993c-1.458 1.364-3.077 1.927-4.86 2.507-1.783.581-4.052.461-6.811.461h-6.253l-1.733 10h-7.301l6.515-34h14.04c4.224 0 7.305 1.215 9.242 3.432 1.937 2.217 2.519 5.364 1.747 9.337-.319 1.637-.856 3.159-1.614 4.515-.759 1.357-1.75 2.624-2.972 3.748zm21.311 2.968l2.881-14.42c.328-1.688.208-2.942-.361-3.555-.57-.614-1.782-1.025-3.635-1.025h-5.79l-3.731 19h-7.244l6.515-33h7.244l-1.732 9h6.453c4.061 0 6.861.815 8.402 2.231s2.003 3.356 1.387 6.528l-3.031 15.241h-7.358zm40.259-11.178c-.318 1.637-.856 3.133-1.613 4.488-.758 1.357-1.748 2.598-2.971 3.722-1.458 1.364-3.078 1.927-4.86 2.507-1.782.581-4.053.461-6.812.461h-6.253l-1.732 10h-7.301l6.514-34h14.041c4.224 0 7.305 1.215 9.241 3.432 1.935 2.217 2.518 5.418 1.746 9.39zM95.919 54h-5.001l-2.727 14h4.442c2.942 0 5.136-.29 6.576-1.4 1.442-1.108 2.413-2.828 2.918-5.421.484-2.491.264-4.434-.66-5.458-.925-1.024-2.774-1.721-5.548-1.721zM38.934 54h-5.002l-2.727 14h4.441c2.943 0 5.136-.29 6.577-1.4 1.441-1.108 2.413-2.828 2.917-5.421.484-2.491.264-4.434-.66-5.458s-2.772-1.721-5.546-1.721z"></path>
                     </svg>
                 </li>
                 <li>
                     <svg viewBox="0 0 300 355.316">
                         <path fill="#ef672f"
                               d="M74.568,308.383V143.167l48.835-30.02v189.776l27.389,15.553l24.556-16.031V113.147l48.835,30.02v166.117  l-74.053,44.142L74.568,308.383z M298.267,265.125l-30.087,17.934l0.111-171.294L149.453,43.582l-116.701,69.56l-0.254,170.162  L2,265.124V90.3L150.131,2l148.135,88.3V265.125z">
-                            </path>
+                        </path>
                     </svg>
                 </li>
                 <li>
@@ -185,18 +193,15 @@
             </ul>
 
         </section>
-        <section class=" text-center">
-            <p>
-                <b>Other skills and knowledge:</b>
-            </p>
+        <section>
+<h3>Other Stuff I Know</h3>
             <ul class="skills-list">
-                <li>Cerified magento frontend developer</li>
                 <li>Graphic design</li>
                 <li>Technical audits</li>
                 <li>UX analysis</li>
                 <li>Project management</li>
                 <li>Electronics knowledge</li>
-                <li>General computer hardware </li>
+                <li>General computer hardware</li>
                 <li>VHDL</li>
                 <li>Computer Vision</li>
                 <li>Robotics</li>
@@ -204,30 +209,190 @@
         </section>
     </article>
     <article class="container-alt container-projects" id="projects">
-<section class="container container-projects">
-    <section class="text-center">
-        <h2>Projects</h2>
-        <div class="wrapper">
-            <div>
+        <section class="container container-projects text-center">
+                <h2>Projects</h2>
+                <ul class="wrapper">
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">Zee & Co</h3>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">Zee & Co Blog</h3>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">KEH Camera</h3>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">Inchoo Website</h3>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">O'Neills</h3>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">Hexagonal Melody</h3>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">Block Runner Rampage</h3>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">Image 2 ASCII</h3>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">Omnivision</h3>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">Histogram-Based Image Search</h3>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">Computer Vision Projects</h3>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">Robotics Projects</h3>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                        </a>
+                    </li>
+                </ul>
+                <div>
+                    <button>Show All Projects</button>
+                </div>
+            </section>
+    </article>
+    <article class="container-education container" id="education">
+        <section>
+            <h2 class="text-center">Education</h2>
+            <div id="cd-timeline" class="cd-container">
+                <div class="cd-timeline-block">
+                    <div class="cd-timeline-img cd-picture">
+                    </div> <!-- cd-timeline-img -->
+
+                    <div class="cd-timeline-content">
+                        <h2>Title of section 1</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                        <a href="#0" class="cd-read-more">Read more</a>
+                        <span class="cd-date">Jan 14</span>
+                    </div> <!-- cd-timeline-content -->
+                </div> <!-- cd-timeline-block -->
+
+                <div class="cd-timeline-block">
+                    <div class="cd-timeline-img cd-movie">
+                    </div> <!-- cd-timeline-img -->
+
+                    <div class="cd-timeline-content">
+                        <h2>Title of section 2</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
+                        <a href="#0" class="cd-read-more">Read more</a>
+                        <span class="cd-date">Jan 18</span>
+                    </div> <!-- cd-timeline-content -->
+                </div> <!-- cd-timeline-block -->
+
+                <div class="cd-timeline-block">
+                    <div class="cd-timeline-img cd-picture">
+                    </div> <!-- cd-timeline-img -->
+
+                    <div class="cd-timeline-content">
+                        <h2>Title of section 3</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
+                        <a href="#0" class="cd-read-more">Read more</a>
+                        <span class="cd-date">Jan 24</span>
+                    </div> <!-- cd-timeline-content -->
+                </div> <!-- cd-timeline-block -->
+
+                <div class="cd-timeline-block">
+                    <div class="cd-timeline-img cd-location">
+                    </div> <!-- cd-timeline-img -->
+
+                    <div class="cd-timeline-content">
+                        <h2>Title of section 4</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                        <a href="#0" class="cd-read-more">Read more</a>
+                        <span class="cd-date">Feb 14</span>
+                    </div> <!-- cd-timeline-content -->
+                </div> <!-- cd-timeline-block -->
+
+                <div class="cd-timeline-block">
+                    <div class="cd-timeline-img cd-location">
+                    </div> <!-- cd-timeline-img -->
+
+                    <div class="cd-timeline-content">
+                        <h2>Title of section 5</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
+                        <a href="#0" class="cd-read-more">Read more</a>
+                        <span class="cd-date">Feb 18</span>
+                    </div> <!-- cd-timeline-content -->
+                </div> <!-- cd-timeline-block -->
+
+                <div class="cd-timeline-block">
+                    <div class="cd-timeline-img cd-movie">
+                    </div> <!-- cd-timeline-img -->
+
+                    <div class="cd-timeline-content">
+                        <h2>Final Section</h2>
+                        <p>This is the content of the last section</p>
+                        <span class="cd-date">Feb 26</span>
+                    </div> <!-- cd-timeline-content -->
+                </div> <!-- cd-timeline-block -->
             </div>
-        </div>
-    </section>
-</section>
-    </article>
-    <article class="container-education" id="education">
+        </section>
+
 
     </article>
-    <article class="container-contacts" id="contacts">
-
+    <article class="container-alt container-contacts" id="contacts">
+        <h2>Contact me</h2>
     </article>
 </main>
 <footer>
 
 </footer>
 
-<!--
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
--->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="js/main.js"></script>
+
 
 <script>
     (function (b, o, i, l, e, r) {
